<resources>
    <string name="app_name">JunoAssessment</string>
    <string name="empty_state">Empty State</string>
    <string name="value_state">Value State</string>
    <string name="deposit">Deposit</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="buy">Buy</string>
    <string name="your_crypto_holdings"><b>Your Crypto Holdings</b></string>
    <string name="recent_transaction"><b>Recent Transactions</b></string>
    <string name="view_all"><b>View all</b></string>
    <string name="current_prices"><b>Current Prices</b></string>
    <string name="gain_number"><b>7.22%</b></string>
    <string name="time"><b>24h</b></string>
    <string name="chGains"><b>$300.22(+21.51%)</b></string>
    <string name="chGainsBtc"><b>$150.22(+8.51%)</b></string>
    <string name="chGainsEth"><b>$172.89(+14.22%)</b></string>
    <string name="chGainsUSAV"><b>$2.51(+0.22%)</b></string>
    <string name="dollar">$</string>
    <string name="success_payment_msg"><b>Congratulations \nPayment \nDone \nSuccessfully!!!</b></string>
    <string name="no_internet_msg"><b>Uh Oh! Internet connectivity is lost</b></string>
    <string name="no_internet_sub_msg"><b>Try connecting to a different network.</b></string>
    <string name="no_data"><b>No data found</b></string>
</resources>