<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="215dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="15dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/download"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/cp_bac"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buy"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_download_icon"
        app:tint="@color/purple_700" />

    <TextView
        android:id="@+id/buy"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/cp_bac"
        android:gravity="center"
        android:text="@string/buy"
        android:textColor="@color/purple_700"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/main_bac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cpLogo"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/graph"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cpLogo"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/cryptoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Bitcoin"
            android:textSize="26dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpLogo" />

        <TextView
            android:id="@+id/cryptoPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="$33,042.34"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cryptoName" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cryptoPrice">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profitLossImg"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_trending_down" />

            <TextView
                android:id="@+id/cryptoProfitLossNumber"
                android:layout_width="40dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:text="@string/gain_number"
                android:textColor="@color/red"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/profitLossImg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cryptoTime"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:text="@string/time"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/cryptoProfitLossNumber"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>